--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-swipeable-views": "^0.14.0",
+    "react-window": "^1.8.10",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "source-map-loader": "^5.0.0",
     "strophe.js": "^3.0.0",
     "tiptap": "^1.32.2",
+    "use-resize-observer": "^9.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
