--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-# REACT_APP_SERVER_DOMAIN=http://sared.online:5000
-REACT_APP_SERVER_DOMAIN=https://sared.online:5444
-REACT_APP_IO_DOMAIN=https://sared.online:5444
-# REACT_APP_IO_DOMAIN=ws://sared.online:5000
+REACT_APP_SERVER_DOMAIN=http://sared.online:5000
+REACT_APP_IO_DOMAIN=ws://sared.online:5000
 
