--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-swipeable-views": "^0.14.0",
+    "react-webrtc": "^1.0.0",
     "react-window": "^1.8.10",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
